# nvforest

./: .pre-commit-config.yaml  CHANGELOG.md  build.sh  dependencies.yaml  pyproject.toml
.devcontainer/cuda12.9-conda/: devcontainer.json
.devcontainer/cuda12.9-pip/: devcontainer.json
.devcontainer/cuda13.2-conda/: devcontainer.json
.devcontainer/cuda13.2-pip/: devcontainer.json
.github/workflows/: build.yaml  pr.yaml  test.yaml
ci/: build_wheel_nvforest.sh
cmake/: RAPIDS.cmake
conda/environments/: all_cuda-129_arch-aarch64.yaml  all_cuda-129_arch-x86_64.yaml  all_cuda-132_arch-aarch64.yaml  all_cuda-132_arch-x86_64.yaml  all_cuda-133_arch-aarch64.yaml  all_cuda-133_arch-x86_64.yaml  clang_tidy_cuda-129_arch-x86_64.yaml  clang_tidy_cuda-132_arch-x86_64.yaml  clang_tidy_cuda-133_arch-x86_64.yaml  cpp_all_cuda-129_arch-x86_64.yaml  cpp_all_cuda-132_arch-x86_64.yaml  cpp_all_cuda-133_arch-x86_64.yaml
conda/recipes/libnvforest/: recipe.yaml
conda/recipes/nvforest/: recipe.yaml
cpp/: .clang-format  CMakeLists.txt
cpp/include/nvforest/: Implementation.md  README.md  buffer.hpp  cuda_stream.hpp  decision_forest.hpp  device_type.hpp  exceptions.hpp  forest_model.hpp  handle.hpp  treelite_importer.hpp
cpp/include/nvforest/detail/: bitset.hpp  ceildiv.hpp  const_agnostic.hpp  copy.hpp  cuda_check.hpp  decision_forest_builder.hpp  degenerate_trees.hpp  device_id.hpp  device_initialization.hpp  device_setter.hpp  evaluate_tree.hpp  exceptions.hpp  forest.hpp  gpu_introspection.hpp  gpu_support.hpp  host_only_throw.hpp  infer.hpp  node.hpp  non_owning_buffer.hpp  owning_buffer.hpp  padding.hpp  postprocessor.hpp
cpp/include/nvforest/detail/copy/: cpu.hpp  gpu.hpp
cpp/include/nvforest/detail/cuda_check/: base.hpp  gpu.hpp
cpp/include/nvforest/detail/device_id/: base.hpp  cpu.hpp  gpu.hpp
cpp/include/nvforest/detail/device_initialization/: cpu.hpp  gpu.cuh  gpu.hpp
cpp/include/nvforest/detail/device_setter/: base.hpp  gpu.hpp
cpp/include/nvforest/detail/host_only_throw/: base.hpp  cpu.hpp
cpp/include/nvforest/detail/infer/: cpu.hpp  gpu.cuh  gpu.hpp
cpp/include/nvforest/detail/infer_kernel/: cpu.hpp  gpu.cuh  shared_memory_buffer.cuh
cpp/include/nvforest/detail/non_owning_buffer/: base.hpp
cpp/include/nvforest/detail/owning_buffer/: base.hpp  cpu.hpp  gpu.hpp
cpp/include/nvforest/detail/raft_proto/: ceildiv.hpp
cpp/include/nvforest/detail/specializations/: device_initialization_macros.hpp  infer_macros.hpp
cpp/src/: infer0.cpp  infer0.cu  infer1.cpp  infer1.cu  infer10.cpp  infer10.cu  infer11.cpp  infer11.cu  infer2.cpp  infer2.cu  infer3.cpp  infer3.cu  infer4.cpp  infer4.cu  infer5.cpp  infer5.cu  infer6.cpp  infer6.cu  infer7.cpp  infer7.cu  infer8.cpp  infer8.cu  infer9.cpp  infer9.cu
cpp/tests/: CMakeLists.txt  decision_forest_builder_invalid_inputs.cpp  treelite_importer.cpp  treelite_importer_invalid_inputs.cpp
cpp/tests/buffer/: buffer.cpp  buffer.cu
cpp/tests/infer_kernel/: shared_memory_buffer.cu
docs/source/: build.rst  conf.py  fil_migration.rst  getting_started.rst  index.rst
python/libnvforest/: CMakeLists.txt  pyproject.toml
python/libnvforest/libnvforest/: load.py
python/nvforest/: CMakeLists.txt  pyproject.toml
python/nvforest/nvforest/benchmark/: README.md  __init__.py  analyze.py  run.py
python/nvforest/nvforest/detail/: cuda_stream.pxd  device_type.pxd  forest_inference.pyx  handle.pxd
python/nvforest/tests/: test_benchmark.py  test_nvforest.py
